<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IblMail" />

        <EditText
            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvCuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCuit" />

        <EditText
            android:id="@+id/edtCuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvMoneada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMoneda" />

        <TextView
            android:id="@+id/tvMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblMonto" />

        <TextView
            android:id="@+id/tvDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diasInversion" />

        <EditText
            android:id="@+id/edtMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <SeekBar
            android:id="@+id/seekDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvDiasSeleccionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diasSeleccionados" />

        <TextView
            android:id="@+id/tvIntereses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblrendimiento" />

        <ToggleButton
            android:id="@+id/togAccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton" />

        <CheckBox
            android:id="@+id/chkAceptoterminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAceptoTerminos" />

        <Button
            android:id="@+id/btnHacerPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnHacerPF" />

        <TextView
            android:id="@+id/edtMensajes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAvisarVencimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblAvisarVencimiento" />

            <Switch
                android:id="@+id/swAvisarVencimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Switch" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/optDolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblMonedaDolar" />

            <RadioButton
                android:id="@+id/optPesos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblMonedaPesos" />

        </RadioGroup>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>